# modelcraft

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  integration_tests.sh  lint.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: pythonapp.yml  pythonpublish.yml  pythontest.yml
autocoord/: gemmineer.py
autocoord/tests/: test_gemmineer.py
buccaneer_pipeline2/: __init__.py  gemmineer.py
docs/: index.html
docs/css/: custom.css
modelcraft/: __init__.py  __main__.py  acorn.py  args.py  arguments.py  buccaneer.py  carb.py  cell.py  combine.py  comit.py  contents.py  coordinates.py  coot_prune.py  data.py  environ.py  findwaters.py  fingerprint.py  gemmineer.py  geometry.py  hklfile.py  job.py  jobs.py  ligand.py  maps.py  mcmodel.py  model.py  modelcraft.py  modelcraftem.py  modelcraftxray.py  monlib.py  monomers.py  parrot.py  pdbe.py  pipeline.py  polymer.py  program.py  prune.py  reflections.py  refmac.py  report.py  (+10 more)
modelcraft/combine/: clashes.py  combine_results.py  statistics.py  types.py
modelcraft/coot/: morph.py  prune.py  sidechains.py
modelcraft/gui/: __main__.py
modelcraft/jobs/: __init__.py  acedrg.py  acorn.py  buccaneer.py  comit.py  coot.py  ctruncate.py  emda.py  findwaters.py  freerflag.py  job.py  libg.py  molrep.py  nautilus.py  nucleofind.py  nucleofind_build.py  parrot.py  phasematch.py  prune.py  refmac.py  servalcat.py  sheetbend.py  sidechains.py
modelcraft/scripts/: contents.py  copies.py  modelcraft.py  rszd.py  sidechains.py  validate.py
modelcraft/tests/: __init__.py
modelcraft/tests/ccp4/: __init__.py  test_acedrg.py  test_arguments.py  test_buccaneer.py  test_cell.py  test_comit.py  test_contents.py  test_coot.py  test_copies.py  test_ctruncate.py  test_findwaters.py  test_freerflag.py  test_geometry.py  test_libg.py  test_molrep.py  test_monlib.py  test_nautilus.py  test_nucleofind.py  test_parrot.py  test_phasematch.py  test_prune.py  test_reflections.py  test_refmac.py  test_rscc.py  test_rszd.py  test_sequence.py  test_servalcat.py  test_sheetbend.py  test_sidechains.py  test_solvent.py  test_structure.py  test_validation.py  test_xray.py
modelcraft/tests/ccpem/: __init__.py  test_em.py  test_emda.py  test_refmac.py  test_servalcat.py
modelcraft/tests/data/: 1kv9_data.mtz  1kv9_sequence.fasta  hewl_data.mtz  hewl_sequence.fasta
tests/: run_test.py  test_contents.py  test_reflections.py  test_residues.py
tests/integration/: __init__.py  test_acedrg.py  test_buccaneer.py  test_comit.py  test_contents.py  test_coot.py  test_ctruncate.py  test_findwaters.py  test_modelcraft.py  test_monomers.py  test_parrot.py  test_pipeline.py  test_polymer.py  test_refmac.py  test_residues.py  test_sheetbend.py  test_solvent.py
tests/unittests/: test_contents.py  test_polymer.py  test_reflections.py  test_residues.py  test_structure.py
(+1063 files in other folders)
