[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "modelcraft"
dynamic = ["version"]
authors = [{ name = "Paul Bond", email = "paul.bond@york.ac.uk" }]
maintainers = [{ name = "Paul Bond", email = "paul.bond@york.ac.uk" }]
description = "Automated model building pipeline for X-ray crystallography"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "gemmi >=0.5.5",
    "numpy",
    "pandas",
    "requests",
    "scipy",
    "tabulate",
]

[project.scripts]
modelcraft = "modelcraft.scripts.modelcraft:main"
modelcraft-contents = "modelcraft.scripts.contents:main"
modelcraft-copies = "modelcraft.scripts.copies:main"
modelcraft-sidechains = "modelcraft.scripts.sidechains:main"
modelcraft-validate = "modelcraft.scripts.validate:main"

[project.urls]
Source = "https://github.com/paulsbond/modelcraft"
Issues = "https://github.com/paulsbond/modelcraft/issues"

[tool.setuptools.dynamic]
version = { attr = "modelcraft.__version__" }
